# vendi

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  datajam-entrypoint.sh  datajam.Dockerfile  heroku.yml  main-entrypoint.sh  manage.py  nayax-entrypoint.sh  nayax.Dockerfile  pyproject.toml  scheduler-entrypoint.sh  scheduler.Dockerfile  temporary_datajam_devices.csv
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile.heroku  Makefile  deployment-tasks.sh  heroku-entrypoint.sh  heroku.Dockerfile  heroku.yml  manage.py  pyproject.toml
backend/app/: asgi.py  settings.py  urls.py  wsgi.py
backend/auth/: serializers.py  urls.py  views.py
backend/consumers/: nayax_consumer.py
backend/core/enums/: __init__.py  environment.py
backend/core/schemas/: nayax.py
backend/core/swagger/: urls.py
backend/sqs/: consumer.py  manager.py
backend/tests/mocking/nayax/: nayax-data.json
backend/tests/unit/schemas/: test_nayax_schema.py
backend/vendi-docker/: Dockerfile  consumers.yml  docker-compose.yml  docker-entrypoint.sh
mspy_vendi/: auth.py  broker.py  config.py  deps.py  json_example.json  server.py
mspy_vendi/api/: __init__.py  auth_backend.py  healthcheck.py
mspy_vendi/api/v1/: __init__.py  activity_log.py  geography.py  impression.py  machine.py  machine_impression.py  product.py  sale.py  user.py
mspy_vendi/app/: asgi.py  settings.py  urls.py  wsgi.py
mspy_vendi/auth/: serializers.py  urls.py  views.py
mspy_vendi/brand_partners/: admin.py  apps.py  models.py
mspy_vendi/brand_partners/migrations/: 0001_initial.py
mspy_vendi/consumers/: datajam_consumer.py  nayax_consumer.py
mspy_vendi/core/: api.py  client.py  constants.py  email.py  factory.py  filter.py  helpers.py  logger.py  manager.py  models.py  pagination.py  sentry.py  service.py  validators.py
mspy_vendi/core/enums/: __init__.py  date_range.py  db.py  export.py  request_method.py  status.py  tags.py
mspy_vendi/core/exceptions/: __init__.py  base_exception.py  error_handlers.py
mspy_vendi/core/helpers/: __init__.py  auth_helpers.py  case_helpers.py  db_helpers.py  env_helpers.py  logging_helpers.py  password_helpers.py  time_helpers.py
mspy_vendi/core/middlewares/: __init__.py  debug_toolbar.py  error_middleware.py  execution_middleware.py  sentry_middleware.py
mspy_vendi/core/mixins/: export.py
mspy_vendi/core/schemas/: base.py  nayax.py
mspy_vendi/core/serializers/: __init__.py  error.py
mspy_vendi/core/swagger/: schema_generator.py  urls.py
mspy_vendi/db/: __init__.py  base.py  engine.py  migration_helpers.py
mspy_vendi/db/migrations/: alembic.ini  env.py
mspy_vendi/domain/activity_log/: filters.py  manager.py  models.py  schemas.py  service.py
mspy_vendi/domain/auth/: __init__.py
mspy_vendi/domain/data_extractor/: __init__.py  base.py  csv.py  excel.py
mspy_vendi/domain/datajam/: client.py  schemas.py  service.py
mspy_vendi/domain/entity_log/: manager.py  models.py  schemas.py
mspy_vendi/domain/geographies/: filters.py  manager.py  models.py  schemas.py  service.py
mspy_vendi/domain/healthcheck/: schemas.py  service.py
mspy_vendi/domain/impressions/: factory.py  filters.py  manager.py  models.py  schemas.py  service.py  tasks.py
mspy_vendi/domain/machine_impression/: factory.py  manager.py  models.py  schemas.py  service.py
mspy_vendi/domain/machine_user/: manager.py  service.py
mspy_vendi/domain/machines/: filters.py  manager.py  models.py  schemas.py  service.py
mspy_vendi/domain/nayax/: schemas.py  service.py
mspy_vendi/geographies/: admin.py  apps.py  models.py
mspy_vendi/impressions/: apps.py  models.py
mspy_vendi/machines/: admin.py  apps.py  models.py
mspy_vendi/products/: admin.py  apps.py  models.py
mspy_vendi/sales/: admin.py  apps.py  models.py
mspy_vendi/sqs/: consumer.py
vendi-docker/: Dockerfile  consumers.yml  docker-compose.yml  docker-entrypoint.sh  test.yml
(+62 files in other folders)
