[tool.poetry]
name = "vendi"
version = "0.1.0"
description = "Vendi REST API"
authors = ["Vendi developers <unknown@venditech.com"]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.2"
alembic-utils = "0.8.3"
email-validator = "2.1.2"
orjson = "3.10.6"
pydantic = "^2.9.2"
pydantic-settings = "2.3.4"
boto3 = "^1.35.46"
structlog = "^24.4.0"
sqlalchemy = "2.0.31"
asyncpg = "0.29.0"
fastapi = "0.111.0"
fastapi-pagination = "0.12.26"
fastapi-filter = "2.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "13.0.0"}
fastapi-debug-toolbar = "0.6.3"
granian = "1.5.1"
uvicorn = "0.30.3"
phonenumbers = "^8.13.48"
taskiq = {extras = ["zmq"], version = "^0.11.7"}
httpx = "^0.27.2"
tenacity = "^9.0.0"
pyzmq = "^26.2.0"
sentry-sdk = "^2.18.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
mypy = "^1.12.1"
pre-commit = "^4.0.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "E",   # Enable error codes checks
    "F",   # Enable checks for source files errors
    "W",   # Enable linter warnings
    "I",   # Enable Isort related checks
    "N",   # Enable pep8-naming conventions
    "RSE", # Enable `unnecessary parentheses on raised exception` check
    "RET", # Enable `return` checks
    "T20", # Enable `print found` checks
    "PIE"  # Enable `specific` checks: https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
]
lint.ignore = [
    "N802", # Function name should be lowercase. Stick to gRPC generation tools -> use PascalCase methods.
    "N805", # First argument of a method should be named `self`. Conflict with Pydantic validators.
    "N999", # Invalid module name. Alembic autogenerate `incorrect` migrations.
]

[tool.ruff.format]
quote-style = "double"


[tool.mypy]
python_version = 3.12
files = ["mspy_vendi"]
disable_error_code = [
    "no-redef", "return", "return-value", "var-annotated", "import", "assignment", "call-arg", "arg-type"
]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
